fix style and transfer to yarn

--- a/docker.env.example
+++ b/docker.env.example
@@ -1,5 +1,6 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
 POSTGRES_DB=wanago
+POSTGRES_PORT=6432
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=root
