--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3"
+
 services:
   postgres:
     container_name: postgres
-    image: postgres:latest
+    image: postgres:alpine
     ports:
-      - "6432:6432"
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
     volumes:
       - /data/postgres:/data/postgres
     env_file:
-      - docker.env
+      - .env
     networks:
       - postgres
 
@@ -22,7 +23,7 @@ services:
     volumes:
       - /data/pgadmin:/root/.pgadmin
     env_file:
-      - docker.env
+      - .env
     networks:
       - postgres
 
